# nl-speech-to-text

./: .gitignore  ai-foundations.yaml  cloud-foundations.yaml  gcloud_setup.sh  requirements.txt  terraform-script.sh
cloud_foundations/iam/: README.md  ai.auto.tfvars  iam-cloud.auto.tfvars  main.tf  variables.tf  versions.tf
cloud_foundations/iam/basic/: README.md  locals.tf  main.tf  outputs.tf  serviceagents.tf  serviceagents.yaml  variables.tf  versions.tf
cloud_foundations/modules/artifact-registry/: CHANGELOG.md  README.md  artifact-registry.tf  iam.tf  outputs.tf  variables.tf  versions.tf
cloud_foundations/modules/cloud-build/: CHANGELOG.md  README.md  outputs.tf  triggers.tf  variables.tf  versions.tf
cloud_foundations/modules/cloud-functions/: CHANGELOG.md  README.md  cloud-function.tf  iam.tf  outputs.tf  variables.tf
cloud_foundations/modules/cloud-run/: README.md  iam.tf  locals.tf  outputs.tf  run.tf  variables.tf
cloud_foundations/modules/cloud-run-job/: CHANGELOG.md  README.md  cloud_run_job.tf  locals.tf  outputs.tf  variables.tf  versions.tf
cloud_foundations/modules/cloud-storage/: CHANGELOG.md  README.md  cloud-storage.tf  outputs.tf  trigger-cloud-function.tf  variables.tf  versions.tf
cloud_foundations/modules/group-management/: CHANGELOG.md  README.md
cloud_foundations/modules/workforce-id-federation/: CHANGELOG.md  README.md  context.tf  main.tf  outputs.tf  variables.tf
cloud_foundations/modules/workload-id-federation/: CHANGELOG.md  README.md  main.tf  outputs.tf  variables.tf  versions.tf
cloud_foundations/resource-manager/: README.md  ai.auto.tfvars  create-projects-manual.md  grant-permissions-after-creation.sh  import-projects.sh  main.tf  rm-cloud.auto.tfvars  variables.tf
cloud_foundations/vpc/: README.md  main.tf  variables.tf
dutch-speech-to-text-test/: README.md  main.py  meeting_transcript.txt  pyproject.toml  setup_gcloud.sh  test_chirp.py
speech-to-text/: .pre-commit-config.yaml  .vertex-ai-foundations.yaml
speech-to-text/pipelines/: README.md
speech-to-text/services/: ai-service.yaml
speech-to-text/services/backend/: .env.example  Dockerfile  README.md  cloudbuild.yaml  config.py  main.py  models.py  pyproject.toml  requirements.txt
speech-to-text/services/backend/services/: __init__.py  speaker_identification.py  storage.py  transcription.py
(+180 files in other folders)
